Add User Model, Dto, Repository, and Controller

--- a/Motqin/appsettings.json
+++ b/Motqin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=A-SEWALAM\\SQLEXPRESS;Initial Catalog=my-books-db;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnectionString": "Data Source=Eng-Abdelhadi;Initial Catalog=my-books-db;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
 }
