--- a/Motqin/appsettings.Development.json
+++ b/Motqin/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "DefaultConnectionString": "Data Source=Eng-Abdelhadi;Initial Catalog=my-books-db;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
     }
   }
 }
