Update .gitignore file to untrack the bin/ and obj/ folders and appsettings.json file

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@
 
 # Settings
 Motqin/appsettings.Development.json
+Motqin/appsettings.json
 
 # Build results
-bin/
-obj/
-Debug/
-Release/
+Motqin/bin/*
+Motqin/obj/*
+Motqin/Debug/*
+Motqin/Release/*
 
 # Rider IDE
 .idea/
