--- a/Motqin/appsettings.json
+++ b/Motqin/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=A-SEWALAM\\SQLEXPRESS;Initial Catalog=motqin-db;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  }
 }
